Add Jumbotron component and update styles for header and jumbotron

--- a/parte_2/src/index.css
+++ b/parte_2/src/index.css
@@ -10,7 +10,7 @@ body {
 
 header {
   font-size: 12px;
-  height: 80px;
+  height: 90px;
 
   .logo {
     img {
@@ -22,7 +22,7 @@ header {
     ul {
       li {
         a {
-          line-height: 48px;
+          line-height: 58px;
         }
 
         .active {
@@ -38,6 +38,12 @@ main {
   .main-top {
     height: 150px;
   }
+}
+
+.jumbotron {
+  height: 390px;
+  background-image: url('/img/jumbotron.jpg');
+  background-size: cover;
 }
 
 .banner {
