Update Main component layout and styles; add thumbnail display for comics

--- a/parte_2/src/index.css
+++ b/parte_2/src/index.css
@@ -35,8 +35,20 @@ header {
 }
 
 main {
-  .main-top {
+  height: 500px;
+
+  .thumbnail {
+    width: 150px;
     height: 150px;
+    overflow: hidden;
+
+    img {
+      object-position: top;
+    }
+  }
+
+  span {
+    font-size: 12px;
   }
 }
 
