Refactor Header component to use dynamic navigation items; enhance styling for active state and hover effect

--- a/parte_2/src/index.css
+++ b/parte_2/src/index.css
@@ -21,11 +21,19 @@ header {
   nav {
     ul {
       li {
-        a {
-          line-height: 58px;
+        &:hover {
+          a {
+            color: #3880F1;
+          }
         }
 
-        .active {
+        a {
+          line-height: 58px;
+          color: black;
+
+        }
+
+        a[status='active'] {
           color: #3880F1;
           border-bottom: .25rem solid #3880F1;
         }
